--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "joi": "^14.3.1",
