--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,13 @@ jobs:
 
 workflows:
   version: 2
-  pr-check-workflow:
+  pr-check:
     jobs:
-    - pr_check
+    - build_and_test
+  build_deploy:
+    jobs:
+    - build_and_test
+    filters:
+      branches:
+        only:
+          - master
