--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
----
 version: 2
 jobs:
-  pr_check:
+  build_and_test:
     docker:
       - image: circleci/node:10.18.1
     steps:
@@ -13,6 +12,15 @@ jobs:
 
 workflows:
   version: 2
-  pr-check-workflow:
+
+  pr-check:
     jobs:
-    - pr_check
+    - build_and_test
+
+  build_deploy:
+    jobs:
+      - build_and_test:
+          filters:
+            branches:
+              only:
+                - master
