--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "joi": "^14.3.1",
+    "joi-date-extensions": "^1.2.0",
     "lodash": "^4.17.15",
     "mocha": "^7.0.0",
     "mockgoose": "^8.0.4",
