--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
+    "express-fileupload": "^1.1.6",
     "joi": "^14.3.1",
     "joi-date-extensions": "^1.2.0",
     "lodash": "^4.17.15",
