--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.624.0",
     "basic-auth": "^2.0.1",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
