--- a/appspec.yml
+++ b/appspec.yml
@@ -6,10 +6,10 @@ files:
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
-      runas: ubuntu
+      runas: root
   AfterInstall:
     - location: scripts/after_install.sh
-      runas: ubuntu
+      runas: root
   ApplicationStart:
     - location: scripts/start_server.sh
-      runas: ubuntu
+      runas: root
