--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "supertest": "^4.0.2",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "winston": "^3.2.1",
+    "winston-cloudwatch": "^2.3.0"
   },
   "devDependencies": {},
   "keywords": [],
