--- a/configs/cloudwatch-config.json
+++ b/configs/cloudwatch-config.json
@@ -3,6 +3,15 @@
         "metrics_collection_interval": 10,
         "logfile": "/var/logs/amazon-cloudwatch-agent.log"
     },
+    "metrics": {
+        "metrics_collected": {
+            "statsd": {
+                "service_address":":8125",
+                "metrics_collection_interval": 10,
+                "metrics_aggregation_interval": 60
+            }
+        }
+    },
     "logs": {
         "logs_collected": {
             "files": {
