--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mockgoose": "^8.0.4",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.4.6",
     "sqs-consumer": "^5.4.0",
     "statsd-client": "^0.4.4",
     "supertest": "^4.0.2",
